name:                hsnsq
version:             0.1.2.0
synopsis:            Haskell NSQ client.
description:         Currently a primitive NSQ client, it implements the very basics of an NSQ client for communicating with single NSQ servers.
homepage:            https://github.com/gamelost/hsnsq
license:             Apache-2.0
license-file:        LICENSE
author:              Anja Berens
maintainer:          pharaun666@gmail.com
copyright:           (c) Anja Berens
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Network.NSQ
                     , Network.NSQ.Connection
                     , Network.NSQ.Identify
                     , Network.NSQ.Parser
                     , Network.NSQ.Types
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2
  hs-source-dirs:      src
  build-depends:       base >=4.5 && <4.8
                     , bytestring
                     , attoparsec
                     , attoparsec-binary
                     , aeson
                     , pipes
                     , pipes-attoparsec
                     , pipes-network
                     , network
                     , text
                     , mtl
                     , containers
                     , stm-chans
                     , stm
                     , async
                     , hslogger
                     , hostname
