name:                hsnsq
author:              Paul Berens
maintainer:          berens.paul@gmail.com
copyright:           (c) Paul Berens
version:             0.1.2.0
license:             Apache-2.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
category:            Network
synopsis:            Haskell NSQ client.
homepage:            https://github.com/gamelost/hsnsq
description:         Currently a primitive NSQ client, it implements the very basics of an NSQ client for communicating with single NSQ servers. For example usage refer to https://github.com/gamelost/nsq-benchmarks/haskell/benchmark.hs
extra-source-files:  README.md

library
  exposed-modules:     Network.NSQ
                     , Network.NSQ.Connection
                     , Network.NSQ.Identify
                     , Network.NSQ.Parser
                     , Network.NSQ.Types
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2
  hs-source-dirs:      src
  build-depends:       base >=4.5 && <4.8
                     , bytestring
                     , attoparsec
                     , attoparsec-binary
                     , aeson
                     , pipes
                     , pipes-attoparsec
                     , pipes-network
                     , network
                     , text
                     , mtl
                     , containers
                     , stm-chans
                     , stm
                     , async
                     , hslogger
                     , hostname
