name: hsnsq
version: 0.1.2.0
cabal-version: >=1.10
build-type: Simple
license: Apache-2.0
license-file: LICENSE
copyright: (c) Anja Berens
maintainer: pharaun666@gmail.com
homepage: https://github.com/gamelost/hsnsq
synopsis: Haskell NSQ client.
description:
    Currently a primitive NSQ client, it implements the very basics of an NSQ client for communicating with single NSQ servers. For example usage refer to <https://github.com/gamelost/nsq-benchmarks/haskell/benchmark.hs benchmark>
category: Network
author: Anja Berens
extra-source-files:
    README.md

library
    build-depends:
        base >=4.7 && < 5,
        bytestring,
        attoparsec,
        attoparsec-binary,
        aeson,
        pipes,
        pipes-attoparsec,
        pipes-network,
        network,
        text,
        mtl,
        containers,
        stm-chans,
        stm,
        async,
        hslogger,
        hostname
    exposed-modules:
        Network.NSQ
        Network.NSQ.Connection
        Network.NSQ.Identify
        Network.NSQ.Parser
        Network.NSQ.Types
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fno-warn-missing-signatures -O2
